--- a/todo/task/templates/task/index.html
+++ b/todo/task/templates/task/index.html
@@ -1,6 +1,11 @@
 {% extends 'task/base.html' %}
 {% block content %}
     <h1>welcome to todo app homepage</h1>
+    <form method='POST'>
+        {% csrf_token %}
+        {{ form.title }}
+        <input type="submit" value="Submit">
+    </form>
     <ul>
     {% for task in tasks %}
         <li>{{ task }}</li>
