--- a/todo/task/templates/task/index.html
+++ b/todo/task/templates/task/index.html
@@ -11,6 +11,7 @@
         <li>
             {{ task }}
             <a href="{% url 'update_task' task.id %}">Update</a>
+            <a href="{% url 'delete_task' task.id %}">Delete</a>
         </li>
 
     {% empty %}
