--- a/todo/task/templates/task/update_task.html
+++ b/todo/task/templates/task/update_task.html
@@ -4,8 +4,8 @@
     <form method='POST'>
         {% csrf_token %}
         {{ form }}
-        <input type="submit" value="Submit">
+        <input type="submit" value="Task Update">
     </form>
     <br>
-    <a href="{% url 'taskList' %}"><input type="submit" value="All Task"></a>
+    <a href="{% url 'taskList' %}"><input type="submit" value="Cancel Update"></a>
 {% endblock %}
