--- a/todo/task/templates/task/index.html
+++ b/todo/task/templates/task/index.html
@@ -4,7 +4,7 @@
     <form method='POST'>
         {% csrf_token %}
         {{ form.title }}
-        <input type="submit" value="Submit">
+        <input type="submit" value="Add Task">
     </form>
     <ul>
     {% for task in tasks %}
