--- a/todo/task/templates/task/index.html
+++ b/todo/task/templates/task/index.html
@@ -15,7 +15,7 @@
       <span>{{ task }}</span>
       {% endif %}
     </li>
-    <a href="{% url 'update_task' task.id %}">Update</a>
+    <a class="btn btn-outline-info" href="{% url 'update_task' task.id %}" role="button">Update</a>
     <a href="{% url 'delete_task' task.id %}">Delete</a>
 
     {% empty %}
