--- a/todo/task/templates/task/delete_task.html
+++ b/todo/task/templates/task/delete_task.html
@@ -1,10 +1,9 @@
 {% extends 'task/base.html' %}
 {% block content %}
     <h3>Are You sure you want to delete '{{ task }}'?</h3>
-    <form method="POST">
+    <form method="POST" class="form-inline">
         {% csrf_token %}
-        <input type="submit" value="Delete">
+        <a class="btn btn-outline-primary" href="{% url 'taskList' %}" role="button">Cancel</a>
+        <input type="submit" class="btn btn-danger" value="Delete" role="button">
     </form>
-    <br>
-    <a href="{% url 'taskList' %}"><input type="submit" value="cancel"></a>
 {% endblock %}
