--- a/todo/task/templates/task/index.html
+++ b/todo/task/templates/task/index.html
@@ -1,4 +1,4 @@
-{% extends 'task/base.html' %} {% block content %}
+{% extends 'task/base.html' %} {% load crispy_forms_tags %} {% block content %}
 <div class="container">
   <h1>welcome to todo app homepage</h1>
   <form method="POST" class="form-inline">
