--- a/todo/task/templates/task/delete_task.html
+++ b/todo/task/templates/task/delete_task.html
@@ -1,9 +1,19 @@
 {% extends 'task/base.html' %}
 {% block content %}
-    <h3>Are You sure you want to delete '{{ task }}'?</h3>
-    <form method="POST" class="form-inline">
-        {% csrf_token %}
-        <a class="btn btn-outline-primary" href="{% url 'taskList' %}" role="button">Cancel</a>
-        <input type="submit" class="btn btn-danger" value="Delete" role="button">
-    </form>
+    <br>
+    <div class="container">
+        <h3>Are you sure you want to delete '{{ task }}'?</h3>
+        <br>
+        <form method="POST">
+            {% csrf_token %}
+            <div class="row">
+                <div class="col-auto">
+                    <a class="btn btn-outline-primary" href="{% url 'taskList' %}" role="button">Cancel</a>
+                </div>
+                <div class="col-auto">
+                    <input type="submit" class="btn btn-danger" value="Delete" role="button">
+                </div>
+            </div>
+        </form>
+    </div>
 {% endblock %}
