--- a/todo/task/templates/task/update_task.html
+++ b/todo/task/templates/task/update_task.html
@@ -5,6 +5,7 @@
     <div class="container">
         <h3 class="display-4 text-center">Update Task Details</h3>
         <hr>
+        <p class="fs-3">Task Created on: {{ task.created }}</p>
         <form method='POST'>
             {% csrf_token %}
             <div class="row">
