--- a/todo/task/templates/task/index.html
+++ b/todo/task/templates/task/index.html
@@ -62,6 +62,7 @@
     <nav aria-label="Page navigation">
       <ul class="pagination justify-content-end">
         <li class="page-item">
+          <!-- if previous page then show -->
           {% if page_obj.has_previous %}
             <a
               class="page-link"
@@ -73,6 +74,9 @@
           {% endif %}
         </li>
         <li class="page-item"><a class="page-link" href="?page=1">1</a></li>
+        <li class="page-item"><a class="page-link" href="?page=2">2</a></li>
+
+        <!-- if next page then show -->
         {% if page_obj.has_next %}
           <li class="page-item">
             <a class="page-link" href="?page={{ page_obj.next_page_number }}"
